# products_management

./: .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  doxygen.cfg  gitlab-ci.yml
ci/: ci.bat
documentation/html/: annotated.html  classconanfile_1_1executable__package-members.html  classconanfile_1_1executable__package.html  classdb__manager_1_1interf_1_1db__manager-members.html  classdb__manager_1_1interf_1_1db__manager.html  classdb__manager_1_1mock_1_1db__manager-members.html  classdb__manager_1_1mock_1_1db__manager.html  classdb__manager_1_1real_1_1db__manager-members.html  classdb__manager_1_1real_1_1db__manager.html  classes.html  classlogger_1_1interf_1_1logger-members.html  classlogger_1_1interf_1_1logger.html  classlogger_1_1mock_1_1logger-members.html  classlogger_1_1mock_1_1logger.html  classlogger_1_1real_1_1logger-members.html  classlogger_1_1real_1_1logger.html  classserver__manager-members.html  classserver__manager.html  db__manager__tests_8hpp_source.html  dir_0313f2ca8e07b37cf367a4453670f2e3.html  dir_11eaf8bd40fba442489d8b986064b921.html  dir_244674c763b96fdad0a6ffe8d0250e08.html  dir_27c1fb084bf316a6641be45db04a697f.html  dir_2815b77176b2ec224f01cd62dc125e57.html  dir_43d979d9cf042e11f2fb4fa636ae9f55.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_503a7340ed8109972ba1477e9b4fc929.html  dir_5685a0840497e3be2f33eebd77fcf16e.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6aaa17ddd598763de9d7d4da7cedae7e.html  (+27 more)
src/: db_manager_tests.hpp  logger_tests.hpp  logs.txt  main.cpp  run_tests.cpp
(+57 files in other folders)
